# PlanReview

./: .gitignore  CLAUDE.md  LICENSE  README.md  known_limitations.md  pyproject.toml
.superpowers/sdd/: task-1-report.md  task-10-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-14-report.md  task-15-report.md  task-16-report.md  task-17-report.md  task-18-report.md  task-19-report.md  task-20-report.md  (+8 more)
app/: main.py  pipeline.py  settings.py
config/: llm_config.example.json
docs/: 2026-07-14-review-assistant-kernel-design.md  2026-07-18-repair-release-verification.md  2026-07-reliability-hardening-fix-log.md  DEMO.md  code-review-and-remediation-2026-07-15.md  future-ideas.md  golden-status-deviation.md  online-llm-adapter-plan.md  real_ai_baseline_20260720.json  remaining-closeout-test-report.md  test-report-template.md  中期报告.md  使用手册.md  结题技术报告.md
scripts/: build_release_package.py  capture_experience_validation.cjs  evaluate_defect20_v1_2.py  import_demo.py  replay_evidence_selector_v12.py  run_experience_local.py  run_local.py  smoke_review_progress.py  start_v12_manual_validation.ps1  stop_v12_manual_validation.ps1  ui_landscape_review.cjs  verify_release_package.py  verify_ui_replay.py
tests/: conftest.py
web/: app.js  expert_experience.js  expert_experience.test.js  index.html  layout.js  layout.test.js  review_display_queue.js  review_display_queue.test.js  review_progress.js  review_progress.test.js  review_state.js  review_state.test.js  styles.css  workbench_state.js  workbench_state.test.js
本地版示例数据包/: README.md
(+183 files in other folders)
