[project]
name = "review-assistant"
version = "0.1.0"
description = "开发方案审查助手（本地版）内核 — 文本型 DOCX 形式初审"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pint>=0.24",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "keyring>=25.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "hypothesis>=6.100"]
deferred = ["pymupdf", "sentence-transformers", "paddleocr", "anthropic", "openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
